--- a/css/style.css
+++ b/css/style.css
@@ -207,13 +207,15 @@ button:focus{
 }
 .en-icon{
 	width: 27px;
-	height: 21px;
+	height: 18px;
 	background-image: url('../images/icons/en-icon.png');
+	background-size: 27px 18px;
 }
 .kr-icon{
 	width: 27px;
-	height: 21px;
+	height: 18px;
 	background-image: url('../images/icons/kr-icon.png');
+	background-size: 27px 18px;
 }
 .lin-icon{
 	width: 23px;
@@ -303,8 +305,27 @@ input[type="color"]{
 	color: #fff;
 	padding: 0 10px;
 	font-family: 'PFDinDisplayPro Light', 'Open Sans', Arial, Helvetica, sans-serif;
-	border-radius: 40px;
+	border-radius: 10px;
 	height: 37px;
+	transition: all .3s;
+}
+textarea:focus,
+select:focus,
+input[type="text"]:focus,
+input[type="password"]:focus,
+input[type="datetime"]:focus,
+input[type="datetime-local"]:focus,
+input[type="date"]:focus,
+input[type="month"]:focus,
+input[type="time"]:focus,
+input[type="week"]:focus,
+input[type="number"]:focus,
+input[type="email"]:focus,
+input[type="url"]:focus,
+input[type="search"]:focus,
+input[type="tel"]:focus,
+input[type="color"]:focus{
+	border-color: #3e2062;
 }
 ::-webkit-input-placeholder{color: #fff;}
 ::-moz-placeholder{color: #fff;}
@@ -320,12 +341,45 @@ input[type="color"]{
 	margin: 91px 0 0 0;
 }
 .form-box-container{}
+.form-box-container + .form-box-container{
+	margin-top: 12px;
+}
 .form-box-title{
 	color: #000;
 	background: rgba(255,255,255,.8);
 	border-radius: 40px;
-	line-height: 32px;
-	padding: 4px 10px 1px;
+	line-height: 26px;
+	padding: 0 10px 4px;
+	font-size: 18px;
+}
+.form-help{
+    background: #f0f0f0;
+    padding: 10px 16px;
+    border-radius: 4px;
+    font-size: 16px;
+}
+
+.checkbox{
+	display: block;
+	position: relative;
+	padding-left: 36px;
+	cursor: pointer;
+}
+input[type="checkbox"]{
+    width: 24px;
+    height: 24px;
+    background: #ffffff;
+    border: 2px solid #c1bcc1;
+    border-radius: 6px;
+    padding: 0;
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: all .3s;
+}
+input[type="checkbox"]:checked{
+    border: 10px solid #3e2062;
 }
 /* Form> */
 
@@ -333,42 +387,39 @@ input[type="color"]{
 /* <Popup */
 .popup{
 	display: none;
-	width: 320px;
+	width: 350px;
 	padding: 25px;
 	border-radius: 12px;
+	max-width: 100%;
+}
+.popup.large{
+	width: 530px;
 }
 .popup-title{
 	font-size: 30px;
 	font-weight: bold;
-	text-align: center;
 	margin-bottom: 15px;
 }
-.popup .form{}
-.popup .form-box{
-	margin-bottom: 10px;
+.popup-title:first-child{
+	margin-top: -10px;
 }
+.popup .form{}
 .popup .form-box:last-child{
 	margin: 0;
 }
-.popup .form-box-title{
-	text-align: center;
-}
 .popup .form-box-container{}
-.popup .form-box-container input{
-    text-align: center;
-    color: inherit;
-    padding: 10px 12px 12px;
-    height: 46px;
+.popup .form-box-container input[type="text"]{
+    color: #000;
+    padding: 10px 8px 12px;
+    height: 42px;
 }
 .popup .form-box-container .button{
-	display: block;
-	width: 100%;
-	box-sizing: border-box;
-	text-align: center;
+    width: 100%;
     background: #3e2062;
     color: #fff;
-    padding-top: 5px;
-    margin-top: 30px;
+    margin-top: 20px;
+    cursor: pointer;
+    float: right;
 }
 /* Popup> */
 
@@ -392,7 +443,7 @@ input[type="color"]{
 	margin: 0 0 -1px 3px;
 }
 .dropdown-button .icon{
-	margin: 3px 3px -3px 0;
+	margin: 2px 3px -2px 0;
 }
 .dropdown{
 	display: none;
@@ -401,7 +452,7 @@ input[type="color"]{
 	text-align: left;
 }
 .header-nav-list-item .dropdown-link .icon{
-	margin: 2px 10px -1px 0;
+	margin: 2px 10px -2px 0;
 }
 
 .split{
@@ -2533,6 +2584,16 @@ footer.box{
 	.button.moved-to-bottom-panel{
 		font-size: 15px;
 		max-width: 200px;
+	}
+
+
+	.popup{
+		padding: 20px 15px;
+	}
+	.form-help{
+		margin-left: -15px;
+		margin-right: -15px;
+		padding: 15px 15px;
 	}
 }
 @media (max-width: 500px){
