--- a/css/style.css
+++ b/css/style.css
@@ -306,6 +306,7 @@ button:focus{
 textarea,
 select,
 input[type="text"],
+input[type="email"],
 input[type="password"],
 input[type="datetime"],
 input[type="datetime-local"],
@@ -333,6 +334,7 @@ input[type="color"]{
 textarea:focus,
 select:focus,
 input[type="text"]:focus,
+input[type="email"]:focus,
 input[type="password"]:focus,
 input[type="datetime"]:focus,
 input[type="datetime-local"]:focus,
@@ -443,7 +445,8 @@ input[type="checkbox"]:checked{
 	margin: 0;
 }
 .popup .form-box-container{}
-.popup .form-box-container input[type="text"]{
+.popup .form-box-container input[type="text"],
+.popup .form-box-container input[type="email"]{
     color: #000;
     padding: 10px 8px 12px;
     height: 42px;
