--- a/css/style.css
+++ b/css/style.css
@@ -1780,6 +1780,21 @@ content: '';
 	max-width: 100%;
 	max-height: 100%;
 }
+.team-icon{
+    display: flex;
+    justify-content: flex-end;
+    height: 0;
+    align-items: flex-end;
+    width: 120px;
+    margin: -22px auto 22px;
+    position: relative;
+}
+.team-icon img{
+    position: static;
+    background: #fff;
+    padding: 3px;
+    border-radius: 2px;
+}
 .team-name{
 	text-align: center;
 	font: 32px/40px 'PFDinDisplayPro Medium', 'PFDinDisplayPro Regular', 'Open Sans', Arial, Helvetica, sans-serif;
